# lumina

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  lib.rs  main.rs
src-tauri/src/ai/: deepseek.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
