[package]
name = "lumina"
version = "0.1.2"
description = "A Tauri App"
authors = ["razen"]
edition = "2021"

[lib]
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

base64 = "0.22"
thiserror = "1"

image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
arboard = "3"
